Update .gitignore to adpat to hardhat developing environment

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,21 @@ yarn-error.log*
 
 # Optional eslint cache
 .eslintcache
+
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
+
+# Hardhat Ignition default folder for deployments against a local node
+ignition/deployments/chain-31337
