--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ node_modules
 
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
+
+# other files
+memo.md
